<resources>
    <string name="app_name">ConversationalIST</string>
    <string name="create">Create</string>
    <string name="geo_fenced">Geo-Fenced</string>
    <string name="join">Join</string>
    <string name="search_name">Search Name</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="guest_sign_up">Guest sign up</string>
    <string name="upload_image">Upload Image</string>
    <string name="log_out">Log out</string>
    <string name="light_dark_mode">Light/Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="location">location</string>
    <string name="chatroomname">ChatRoomName</string>
    <string name="radius">radius</string>
    <string name="publicroom">PublicRoom</string>
    <string name="privateroom">PrivateRoom</string>
    <string name="file">File</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="leave">Leave</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="simple_sign_up">Simple Sign Up</string>
    <string name="simple_log_in">Simple log in</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="maps">Maps</string>
    <string name="locations_permission_denied">Locations permission denied</string>
    <string name="Uploaded_successfully">Uploaded successfully</string>
    <string name="Uploaded">Uploaded</string>
    <string name="ChatRoom_already_exists">ChatRoom already exists</string>
    <string name="Successfully_created_ChatRoom">Successfully created ChatRoom</string>
    <string name="Use_Leave_Button">Use Leave Button</string>
    <string name="Successfully_removed_user">Successfully removed user</string>
    <string name="User_Already_Registered">User Already Registered</string>
    <string name="Successfully_added_user">Successfully added user</string>
    <string name="Selected_chatroom">Selected chatroom</string>
    <string name="Outside_of_radius_for_chatroom">Outside of radius for chatroom</string>
    <string name="Invalid_input">Invalid input</string>
    <string name="Logged_in_successfully">Logged in successfully</string>
    <string name="Username_already_in_use">Username already in use</string>
    <string name="Signed_up_successfully">Signed up successfully</string>
    <string name="Password_updated">Password updated</string>
    <string name="Error_password_not_updated">Error password not updated</string>
    <string name="Error_auth_failed">Error auth failed</string>
    <string name="Please_introduce_password">Please introduce password</string>
    <string name="ChatRoom_is_private">ChatRoom is private</string>
</resources>