<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/chatRoomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/chatroomname"
        app:layout_constraintBottom_toTopOf="@+id/txtLocationLat"
        app:layout_constraintEnd_toEndOf="@+id/txtLocationLat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLocationLat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <EditText
        android:id="@+id/txtLocationLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/latitude"
        app:layout_constraintBottom_toTopOf="@+id/txtRadius"
        app:layout_constraintEnd_toEndOf="@+id/txtRadius"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtRadius" />

    <EditText
        android:id="@+id/txtLocationLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/longitude"
        app:layout_constraintBottom_toTopOf="@+id/txtLocationLat"
        app:layout_constraintEnd_toEndOf="@+id/txtRadius"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtRadius" />

    <EditText
        android:id="@+id/txtRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/publicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/publicroom"
        app:layout_constraintEnd_toEndOf="@+id/txtRadius"
        app:layout_constraintStart_toStartOf="@+id/txtRadius"
        app:layout_constraintTop_toBottomOf="@+id/txtRadius" />

    <Button
        android:id="@+id/privateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/privateroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicButton" />

    <Button
        android:id="@+id/geoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo_fenced"
        app:layout_constraintEnd_toEndOf="@+id/privateButton"
        app:layout_constraintStart_toStartOf="@+id/privateButton"
        app:layout_constraintTop_toBottomOf="@+id/privateButton" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="@+id/geoButton"
        app:layout_constraintStart_toStartOf="@+id/geoButton"
        app:layout_constraintTop_toBottomOf="@+id/geoButton" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        app:layout_constraintEnd_toEndOf="@+id/createButton"
        app:layout_constraintStart_toStartOf="@+id/createButton"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/search_name"
        app:layout_constraintBottom_toTopOf="@+id/chatRoomName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />
</androidx.constraintlayout.widget.ConstraintLayout>